# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.30

Version 8.0.29

  - Fix for Bug#21978230, COMMENT PARSING NOT PROPER IN PREPSTMT.EXECUTEBATCH().

  - Fix for Bug#81468 (23312764), MySQL server fails to rewrite batch insert when column name contains word select.

  - Fix for Bug#106435 (33850099), 8.0.28 Connector/J has regressive in setAutoCommit after Bug#104067 (33054827).

  - Fix for Bug#106240 (33781440), StringIndexOutOfBoundsException when VALUE is at the end of the query.

  - Fix for Bug#106397 (33893591), Contribution: fix: fix LocalizedErrorMessages.properties doc: less then -> ...
    Thanks to Jianjian Song for his contribution.

  - Fix for Bug#77924 (25710160), JDBC SOCKS SHOULD NOT PERFORM LOCAL DNS RESOLUTION.

  - Fix for Bug#82084 (23743938), YEAR DATA TYPE RETURNS INCORRECT VALUE FOR JDBC GETCOLUMNTYPE().

  - Fix for Bug#106441 (33850155), Add charset mapping for utf8mb3.

  - WL#15048, Upgrade Protocol Buffers dependency to protobuf-java-3.19.4.

  - Fix for Bug#106065 (33726184) Contribution: BigDecimal.toPlainString no need to check decimal exponent.
    Thanks to Baoyi Chen for his contribution.

  - Fix for Bug#106171 (33757217), Contribution: Remove unnecessary boxing in ResultSetImpl.
    Thanks to Ningpp Ning for his contribution.

  - Fix for Bug#25701740, STMT EXECUTION FAILS FOR REPLICATION CONNECTION WHEN USECURSORFETCH=TRUE.

  - Fix for Bug#33723611, getDefaultTransactionIsolation must return repeatable read.

  - Fix for Bug#38954 (11749415), DATA TRUNCATION WHILE USING BIT(1) IN STORED PROCEDURE WITH INOUT TYPE.

  - Fix for Bug#85317 (25672958), EXECUTE BATCH WILL THROW NULL POINTER EXCEPTION WHERE THE COLUMN IS BLOB!

  - Fix for Bug#105915 (33678490), Connector/J 8 server prepared statement precision loss in execute batch.

  - Fix for Bug#104349 (33563548), com.mysql.cj NPE.

  - Fix for Bug#62006 (16714956), JAVA.IO.NOTSERIALIZABLEEXCEPTION: JAVA.IO.STRINGREADER WHEN PROFILESQL=TRUE.
