@@ -568,7 +568,7 @@ ServerPreparedStatement.2=Connection is read-only.
 ServerPreparedStatement.3=Queries leading to data modification are not allowed
 ServerPreparedStatement.6=\ unable to materialize as string due to underlying SQLException: 
 ServerPreparedStatement.7=Not supported for server-side prepared statements.
-ServerPreparedStatement.8=No parameters defined during prepareCall()
+ServerPreparedStatement.8=No parameters specified during prepareStatement() or prepareCall()
 ServerPreparedStatement.9=Parameter index out of bounds. 
 ServerPreparedStatement.10=\ is not between valid values of 1 and 
 ServerPreparedStatement.11=Driver can not re-execute prepared statement when a parameter has been changed 
